# test-qr-code-website

./: README.md  color.txt
backend/: Dockerfile  pyproject.toml
backend/app/: containers.db  crud.py  database.py  main.py  models.py
frontend/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
frontend/src/: app.d.ts
frontend/src/lib/: config.ts  speech.ts
frontend/src/lib/components/: QrScanner.svelte
frontend/src/lib/stores/: mockUsers.ts  theme.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/create/: +page.svelte
frontend/src/routes/export/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/scan/: +page.svelte
frontend/src/routes/scan/[qr_code]/: +page.svelte
frontend/src/routes/update/: +page.svelte
